# 20_games_challenge_01_pong_ver3

./: .gitignore  AGENTS.md  LICENSE  README.md  brief.md  stretch_goals.md
.github/workflows/: deploy.yml
.opencode/plans/: winning_score_config.md
pong/: Cargo.toml  config.toml  credits_config.toml
pong/src/: components.rs  credits_config.rs  credits_plugin.rs  game_over_plugin.rs  game_plugin.rs  lib.rs  main.rs  menu_plugin.rs
pong/web/: index.html
