[package]
name = "pong"
version = "0.1.0"
edition = "2024"

[lib]
name = "pong_lib"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.18", features = ["2d", "ui", "web", "default_font"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1